--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -18,41 +18,39 @@
     <br />
     <h4>Unsere Pilotschulen</h4>
     <ul>
-        <li><a href="https://www.dg-info.de/" target="_blank">Dientzenhofer-Gymnasium</a>
-        <li> <a href="http://www.elisabethenschule.net/eli-news.html" target="_blank">Elisabethenschule Frankfurt am Main</a>
-        <li><a href="https://www.fsg-arnsberg.de/" target="_blank">Franz-Stock-Gymnasium Arnsberg</a>
-        <li><a href="http://www.gauss-worms.de/index.php?id=2" target="_blank">Gauß-Gymnasium Worms</a>
-        <li><a href="http://www.gts-bellevue.de/ganztagsschule/" target="_blank">Gemeinschaftsschule Bellevue Saarbrücken</a>
-        <li><a href="http://lg-ks.de/" target="_blank">Georg-Christoph-Lichtenberg-Schule Kassel</a>
-        <li><a href="https://www.carolinum.de" target="_blank">Gymnasium Carolinum Neustrelitz</a>
-        <li><a href="http://www.marianum-meppen.de/" target="_blank">Gymnasium Marianum Meppen</a>
-        <li><a href="https://www.gymnasium-saarburg.de/" target="_blank">Gymnasium Saarburg</a>
-        <li><a href="https://www.hhgym.de/" target="_blank">Heinrich-Hertz-Gymnasium Berlin</a>
-        <li><a href="https://www.hsg-kl.de/" target="_blank">Hohenstaufen-Gymnasium Kaiserslautern</a>
-       <li><a href="https://www.jkg-lebach.de/jkg/" target="_blank">Johannes-Kepler-Gymnasium Lebach</a>
-       <li> <a href="http://www.sailer-gymnasium.de/" target="_blank">Johann-Michael-Sailer-Gymnasium Dillingen</a>
-       <li><a href="http://www.klaus-groth-schule.de/" target="_blank">Klaus-Groth-Schule Neumünster</a>
-      <li><a href="http://www.lgh-gmuend.de/" target="_blank">Landesgymnasium für Hochbegabte Schwäbisch Gmünd</a>
-      <li><a href="https://www.landesschule-pforta.de/index.php" target="_blank">Landesschule Pforta Naumburg</a>
-      <li><a href="http://leiningergymnasium.de/" target="_blank">Unterrichtsvorbereitung in der Schul-CloudLeininger-Gymnasium Grünstadt</a>
-      <li><a href="http://mcgym.de/startseite.html" target="_blank">Marie-Curie-Gymnasium Ludwigsfelde</a>
-      <li><a href="http://www.mls-marburg.de/" target="_blank">Martin-Luther-Schule Marburg</a>
-      <li><a href="http://osg-mainz.de/" target="_blank">Otto-Schott-Gymnasium Mainz-Gonsenheim</a>
-      <li><a href="http://www.ratsgymnasium-wolfsburg.de/" target="_blank">Ratsgymnasium Wolfsburg</a>
-      <li><a href="http://www.schillerschule-hannover.de/" target="_blank">Schillerschule Hannover</a>
-      <li><a href="https://www.stiftsgymnasium.de/" target="_blank">Stiftsgymnasium Sindelfingen</a>
-      <li><a href="http://www.ursulaschule.de/" target="_blank">Ursulaschule Osnabrück</a>
-      <li><a href="https://www.wilhelm-gym.de/" target="_blank">Wilhelm-Gymnasium Braunschweig</a>
-      <li><a href="http://www.wilhelm-hittorf-gymnasium.de/aktuelles/" target="_blank">Wilhelm-Hittorf-Gymnasium Münster</a>
-     </li>
+        <li><a href="https://www.dg-info.de/" target="_blank">Dientzenhofer-Gymnasium</a></li>
+        <li> <a href="http://www.elisabethenschule.net/eli-news.html" target="_blank">Elisabethenschule Frankfurt am Main</a></li>
+        <li><a href="https://www.fsg-arnsberg.de/" target="_blank">Franz-Stock-Gymnasium Arnsberg</a></li>
+        <li><a href="http://www.gauss-worms.de/index.php?id=2" target="_blank">Gauß-Gymnasium Worms</a></li>
+        <li><a href="http://www.gts-bellevue.de/ganztagsschule/" target="_blank">Gemeinschaftsschule Bellevue Saarbrücken</a></li>
+        <li><a href="http://lg-ks.de/" target="_blank">Georg-Christoph-Lichtenberg-Schule Kassel</a></li>
+        <li><a href="https://www.carolinum.de" target="_blank">Gymnasium Carolinum Neustrelitz</a></li>
+        <li><a href="http://www.marianum-meppen.de/" target="_blank">Gymnasium Marianum Meppen</a></li>
+        <li><a href="https://www.gymnasium-saarburg.de/" target="_blank">Gymnasium Saarburg</a></li>
+        <li><a href="https://www.hhgym.de/" target="_blank">Heinrich-Hertz-Gymnasium Berlin</a></li>
+        <li><a href="https://www.hsg-kl.de/" target="_blank">Hohenstaufen-Gymnasium Kaiserslautern</a></li>
+       <li><a href="https://www.jkg-lebach.de/jkg/" target="_blank">Johannes-Kepler-Gymnasium Lebach</a></li>
+       <li> <a href="http://www.sailer-gymnasium.de/" target="_blank">Johann-Michael-Sailer-Gymnasium Dillingen</a></li>
+       <li><a href="http://www.klaus-groth-schule.de/" target="_blank">Klaus-Groth-Schule Neumünster</a></li>
+      <li><a href="http://www.lgh-gmuend.de/" target="_blank">Landesgymnasium für Hochbegabte Schwäbisch Gmünd</a></li>
+      <li><a href="https://www.landesschule-pforta.de/index.php" target="_blank">Landesschule Pforta Naumburg</a></li>
+      <li><a href="http://leiningergymnasium.de/" target="_blank">Unterrichtsvorbereitung in der Schul-CloudLeininger-Gymnasium Grünstadt</a></li>
+      <li><a href="http://mcgym.de/startseite.html" target="_blank">Marie-Curie-Gymnasium Ludwigsfelde</a></li>
+      <li><a href="http://www.mls-marburg.de/" target="_blank">Martin-Luther-Schule Marburg</a></li>
+      <li><a href="http://osg-mainz.de/" target="_blank">Otto-Schott-Gymnasium Mainz-Gonsenheim</a></li>
+      <li><a href="http://www.ratsgymnasium-wolfsburg.de/" target="_blank">Ratsgymnasium Wolfsburg</a></li>
+      <li><a href="http://www.schillerschule-hannover.de/" target="_blank">Schillerschule Hannover</a></li>
+      <li><a href="https://www.stiftsgymnasium.de/" target="_blank">Stiftsgymnasium Sindelfingen</a></li>
+      <li><a href="http://www.ursulaschule.de/" target="_blank">Ursulaschule Osnabrück</a></li>
+      <li><a href="https://www.wilhelm-gym.de/" target="_blank">Wilhelm-Gymnasium Braunschweig</a></li>
+      <li><a href="http://www.wilhelm-hittorf-gymnasium.de/aktuelles/" target="_blank">Wilhelm-Hittorf-Gymnasium Münster</a></li>
     </ul>
     <br />
   <p>Im Rahmen des Projekts wird die Schul-Cloud durch drei Arbeitsgruppen des MINT-EC-Themenclusters Schul-Cloud unterstützt:</p>
 <ul>
-        <li>- AG IT
-<li>- AG Schulleitung
-<li>- AG Unterricht
-</li>
+        <li>- AG IT</li>
+<li>- AG Schulleitung</li>
+<li>- AG Unterricht</li>
     </ul>
    <br /> 
 <p>Wir möchten uns ganz herzlich für die tolle Zusammenarbeit und das große Engagement unserer Pilotschullehrkräfte bedanken!</p> 
@@ -71,25 +69,26 @@
  <br /> 
  <p><b>2017</b></p>
  <ul>
-        <li>- Meinel, C., Renz, J., Grella, C., Karn, N. & Hagedorn, C. (2017). Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der Schul-Cloud. Technische Berichte Nr. 116. Potsdam: Universitätsverlag 
+        <li>- Meinel, C., Renz, J., Grella, C., Karn, N. & Hagedorn, C. (2017). Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der Schul-Cloud. Technische Berichte Nr. 116. Potsdam: Universitätsverlag<br />  
         <a href="https://publishup.uni-potsdam.de/opus4-ubp/frontdoor/deliver/index/docId/10385/file/tbhpi116.pdf"
-                title="Initiates file download" target="_blank">"Die Cloud für Schulen in Deutschland" (.pdf)</a>
-        <li>- Malyska, V. & Meinel, C. (2017). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17
-    </li>
-    </ul>
+                title="Initiates file download" target="_blank">"Die Cloud für Schulen in Deutschland" (.pdf)</a></li>
+        <li>- Malyska, V. & Meinel, C. (2017). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
+        <li>Grella, C., Karn, N., Renz, J., & Meinel, C. (2017). Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder? In: C. Igel et al.(Hrsg.), Bildungsräume, DeLFI 2017 -Die 15. e-Learning Fachtagung Informatik, Lecture Notes in Informatics (LNI) (S. 87 – 98), Bonn: Gesellschaft für Informatik.<br />
+       <a href="https://dl.gi.de/bitstream/handle/20.500.12116/4881/B7%20Schulrechner%20wandern%20in%20die%20Cloud.pdf?sequence=1&isAllowed=y"
+                title="Initiates file download" target="_blank">"Schulrechnerwandern in die Cloud" (.pdf)</a></li>
+      </ul>
     <br />
   <p><b>2018</b></p>
    <ul>
-        <li>- Malyska, V., Renz, J. & Meinel, C. (2018). Eine Innovation für Deutschlands Bildungslandschaft – Projekt Schul-Cloud . In Scheiter, K. & Riecke-Baulecke, T. (Hrsg.), Schulmanagement-Handbuch 165: Schule 4.0 (Vol. 37, S. 75–83). München: Oldenbourg.  
-    </li>
+        <li>- Malyska, V., Renz, J. & Meinel, C. (2018). Eine Innovation für Deutschlands Bildungslandschaft – Projekt Schul-Cloud . In Scheiter, K. & Riecke-Baulecke, T. (Hrsg.), Schulmanagement-Handbuch 165: Schule 4.0 (Vol. 37, S. 75–83). München: Oldenbourg.</li>
+        <li>- Malyska, V. & Meinel, C. (2018). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
     </ul>
     <br /> 
     <h4>Aufzeichnungen von Vorträgen</h4>
     <ul>
-     <li><a href="https://www.tele-task.de/series/1149/" target="_blank">Vorträge des 1. Schul-Cloud-Forums (April 2017)</a>
-     <li><a href="https://www.tele-task.de/series/1196/" target="_blank">Vorträge des 2. Schul-Cloud-Forums (März 2018)</a>
-    </li>
-    </ul>
+     <li><a href="https://www.tele-task.de/series/1149/" target="_blank">Vorträge des 1. Schul-Cloud-Forums (April 2017)</a></li>
+     <li><a href="https://www.tele-task.de/series/1196/" target="_blank">Vorträge des 2. Schul-Cloud-Forums (März 2018)</a></li>
+       </ul>
     <br /> 
      <h4>Unsere Auszeichnungen</h4>
     <p>Ernennung zum <a href="https://hpi.de/pressemitteilungen/2017/schul-cloud-als-ausgezeichneter-ort-2017-praemiert.html" target="_blank">„Ausgezeichneten Ort“</a> im bundesweiten Wettbewerb <a href="https://land-der-ideen.de" target="_blank">„Land der Ideen“</a>.</p> 
