--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -201,7 +201,7 @@
                         <div class="row" id="titlebar">
                             <div class="col-sm-9">
                                 <div>
-                                    <h4>{{title}}</h4>
+                                    <h4 id="page-title">{{title}}</h4>
                                 </div>
                                 <div>
                                     {{subtitle}}
