--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -2,52 +2,8 @@
 {{#extend "lib/loggedin"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/files/files.css"/>
+        <link rel="stylesheet" href="/styles/teams/team.css"/>
         <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css"/>
-        <style>
-            .section-teams .section-news .container-fluid {
-                padding: 0;
-            }
-            .section-teams h4 {
-                margin-bottom: 1rem;
-            }
-            .section-teams .lead:empty {
-                margin-bottom: 0
-            }
-            .section-teams > section {
-                margin-top: 3rem
-            }
-            .section-teams .files {
-                margin-bottom: 10px;
-            }
-
-            .create-course-event, .create-team-event {
-                label {
-                    margin-right: 0.5rem;
-                }
-                .toggle {
-                    height: 2rem !important;
-                    width: 7rem !important;
-                    .toggle-handle {
-                        width: 0.3rem !important;
-                        background: whitesmoke !important;
-                    }
-                }
-
-                .off {
-                    background: grey !important;
-                    label {
-                        color: whitesmoke !important;
-                        padding-left: 48px !important;
-                    }
-                }
-
-                .on {
-                    label {
-                        padding-right: 48px !important;
-                    }
-                }
-            }
-        </style>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -58,16 +14,22 @@
     {{/content}}
 
     {{#content "page"}}
-
+    <div id="team-wrapper">
         <section class="section-teams" data-id="{{../_id}}">
-
             <div class="row description">
                 <div class="col-sm-12">
                     <p class="lead">{{description}}</p>
                 </div>
             </div>
 
-            <section style="margin-top: 2rem" class="row">
+            <section class="section-chat" style="margin-top: 2rem">
+                <h4>Chat</h4>
+                <div class="rocketchat">
+                    <iframe src="https://open.rocket.chat/channel/general?layout=embedded" frameborder="0"></iframe>
+                </div>
+            </section>
+
+            <section class="section-members row">
                 <div class="col-sm-12">
                     <h4>Teilnehmer</h4>
                     <p>
@@ -193,5 +155,7 @@
             {{/embed}}
 
         </section>
+    </div>
+
     {{/content}}
 {{/extend}}
