--- a/static/styles/teams/team.scss
+++ b/static/styles/teams/team.scss
@@ -6,17 +6,8 @@
       width: 100%;
     }
   }
-  @media (max-width: 1100px) {
-    .section-news .sc-card-wrapper,
-    .events-card,
-    .files > .row > [class^="col-"] {
-      width: 100%;
-      flex: 0 0 100%;
-      max-width: 100%;
-    }
-  }
   @media (max-width: 1600px) {
-    .files {
+    .files, .events-card {
       .col-xs-3 {
         flex: 0 0 33.33333%;
         max-width: 33.33333%;
@@ -25,6 +16,24 @@
         flex: 0 0 66.66666%;
         max-width: 66.66666%;
       }
+    }
+  }
+  @media (max-width: 1300px) {
+    .section-news .sc-card-wrapper,
+    .events-card,
+    .files > .row > [class^="col-"] {
+      width: 50%;
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+  }
+  @media (max-width: 1100px) {
+    .section-news .sc-card-wrapper,
+    .events-card,
+    .files > .row > [class^="col-"] {
+      width: 100%;
+      flex: 0 0 100%;
+      max-width: 100%;
     }
   }
   @media (min-width: 767px) {
