--- a/static/styles/lib/tabbar/tabbar.scss
+++ b/static/styles/lib/tabbar/tabbar.scss
@@ -18,9 +18,7 @@
         vertical-align: middle;
         cursor: pointer;
         font-weight: 500;
-      }
 
-      .text {
         font-size: 20px;
         opacity: 0.54;
       }
@@ -29,10 +27,10 @@
         color: $primaryColor;
       }
 
-      &.active {
+      &.active .text {
+        opacity: 1;
         color: $primaryColor;
-        opacity: 1 !important;
-        font-weight: 700 !important;
+        font-weight: 700;
       }
     }
 
