--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -33,8 +33,7 @@
 
                     {{#inArray "INVITE_EXPERTS" permissions}}
                         <div class="col-sm-6">
-                            <p>Lade externe Admins anderer Schulen per E-Mail ein.</p>
-                            {{!-- <p>Lade externe Experten und Admins anderer Schulen per E-Mail ein.</p> --}}
+                            <p>Lade Lehrer anderer Schulen und Experten per E-Mail ein.</p>
                             <button class="btn btn-primary btn-invite-external-member">
                                 Externe Teilnehmer einladen
                             </button>
