--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -1,76 +1,80 @@
 {{#extend "lib/loggedin"}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="https://unpkg.com/vue"></script>
-        <!--Load the web component polyfill-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-loader.js"></script>
-        <script src="/scripts/coursesOverview.js" type="text/javascript" defer></script>
-        <script src="/scripts/vue-components/my-custom-element.js"></script>
-    {{/content}}
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/courses/course.css"/>
-    {{/content}}
+  {{#content "scripts" mode="append"}}
+    <script src="https://unpkg.com/vue"></script>
+    <!--Load the web component polyfill-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-loader.js"></script>
+    <script src="/scripts/coursesOverview.js" type="text/javascript" defer></script>
+    <script src="/scripts/vendor-vue.js" defer></script>
+    <script src="/scripts/vue-components-js/courses/courses.js" defer></script>
+  {{/content}}
+  {{#content "styles" mode="append"}}
+    <link rel="stylesheet" href="/styles/courses/course.css" />
+  {{/content}}
 
-    {{#content "page"}}
-        <section class="section-courses">
-                <my-custom-element></my-custom-element>
-                {{#if courses}}
-                    {{> 'dashboard/components/card_section' section-id="courses" title="" content=courses link-text="Öffnen" additionalInfoName="memberCount"}}
-                {{else}}
-                    <div class="col-xs-12">
-                        <p class="text-muted">
-                            <i class="fa fa-frown-o"></i>
-                            <span>Noch keine Kurse</span>
-                        </p>
-                    </div>
-                {{/if}}
+  {{#content "page"}}
+    <section class="section-courses">
+      <div data-user-id="{{ ../currentUser._id }}" id="vue-course-cards">
+      </div>
+      {{#if courses}}
+        {{> 'dashboard/components/card_section' section-id="courses" title="" content=courses link-text="Öffnen" additionalInfoName="memberCount"}}
+      {{else}}
+        <div class="col-xs-12">
+          <p class="text-muted">
+            <i class="fa fa-frown-o"></i>
+            <span>Noch keine Kurse</span>
+          </p>
+        </div>
+      {{/if}}
 
-                {{#userHasPermission "COURSE_EDIT"}}
-                    <section>
-                        <div class="section-title mb-2"><h4>Meine Vertretungen</h4></div>
-                        {{#if ../substitutionCourses}}
-                            {{> 'dashboard/components/card_section' section-id="substitutionCourses" title="" content=../substitutionCourses link-text="Öffnen" additionalInfoName="memberCount"}}
-                        {{else}}
-                            <div class="col-xs-12">
-                                <p class="text-muted">
-                                    <span>Keine Vertretungen</span>
-                                </p>
-                            </div>
-                        {{/if}}
-                    </section>
-                {{/userHasPermission}}
-
-                {{#userHasPermission "COURSE_EDIT"}}
-                <div class="col-xs-12">
-                    <div class="row padding-top">
-                        <div class="col-sm-12">
-                            <div class="pull-right">
-                              <a class="btn btn-secondary btn-import-course">Kurs importieren</a>
-                              <a href="/courses/add" class="btn btn-primary btn-add">Kurs anlegen</a>
-                           </div>
-                        </div>
-                    </div>
-                </div>
-                {{/userHasPermission}}
-
-            {{#embed "lib/components/modal" class="member-modal"}}
-                {{#content "body"}}
-                    <div class="modal-body">
-                        <div id="member-modal-body">
-                        </div>
-                        {{#userHasPermission "COURSE_EDIT"}}
-                            <div id='course-edit'></div>
-                        {{/userHasPermission}}
-                    </div>
-                {{/content}}
-            {{/embed}}
-
-            {{#embed "lib/components/modal-form" class="import-modal"}}
-                {{#content "fields"}}
-                    {{> "courses/forms/form-import-course"}}
-                {{/content}}
-            {{/embed}}
-
+      {{#userHasPermission "COURSE_EDIT"}}
+        <section>
+          <div class="section-title mb-2">
+            <h4>Meine Vertretungen</h4>
+          </div>
+          {{#if ../substitutionCourses}}
+            {{> 'dashboard/components/card_section' section-id="substitutionCourses" title="" content=../substitutionCourses link-text="Öffnen" additionalInfoName="memberCount"}}
+          {{else}}
+            <div class="col-xs-12">
+              <p class="text-muted">
+                <span>Keine Vertretungen</span>
+              </p>
+            </div>
+          {{/if}}
         </section>
-    {{/content}}
+      {{/userHasPermission}}
+
+      {{#userHasPermission "COURSE_EDIT"}}
+        <div class="col-xs-12">
+          <div class="row padding-top">
+            <div class="col-sm-12">
+              <div class="pull-right">
+                <a class="btn btn-secondary btn-import-course">Kurs importieren</a>
+                <a href="/courses/add" class="btn btn-primary btn-add">Kurs anlegen</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      {{/userHasPermission}}
+
+      {{#embed "lib/components/modal" class="member-modal"}}
+      {{#content "body"}}
+        <div class="modal-body">
+          <div id="member-modal-body">
+          </div>
+          {{#userHasPermission "COURSE_EDIT"}}
+            <div id='course-edit'></div>
+          {{/userHasPermission}}
+        </div>
+      {{/content}}
+      {{/embed}}
+
+      {{#embed "lib/components/modal-form" class="import-modal"}}
+      {{#content "fields"}}
+        {{> "courses/forms/form-import-course"}}
+      {{/content}}
+      {{/embed}}
+
+    </section>
+  {{/content}}
 {{/extend}}
