--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -23,7 +23,7 @@
         <meta name="theme-color" content="#b10438">
         <meta name="application-name" content="{{theme.title}}">
         <meta name="X-Recruiting"
-            content="Das Entwickler-Team der HPI Schul-Cloud sucht nach Verstärkung! Schaut doch mal nach unseren Stellen: http://localhost:3100/community#jobs">
+            content="Das Entwickler-Team der HPI Schul-Cloud sucht nach Verstärkung! Schaut doch mal nach unseren Stellen: https://schul-cloud.org/community#jobs">
         <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#b10438">
         <link rel="apple-touch-icon" href="/images/logo/app-icon-512.png">
         <link rel="apple-touch-icon" sizes="120x120" href="/images/logo/app-icon-120.png">
