--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -72,7 +72,27 @@ body {
         }
     }
     main{
-        min-height: calc(100vh - 228px);
+		min-height: calc(100vh - 228px);
+		#forum {
+			.alert{
+				padding:12px 16px;
+				color:white;
+				background-color:#b10438;
+				border-color:transparent;
+				margin:0;
+			}
+			a {
+				color: white;
+				&:hover {
+					text-decoration: none!important;
+				}
+			}
+			h5 {
+				span {
+					border-bottom: solid 1px white;
+				}
+			}
+		}
         .illustration{
             min-width: 150px;
             width: 25vw;
