--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -27,7 +27,7 @@
 					<section class="card" id="forum">
 						<div class="alert alert-danger">
 							<div class="row">
-								<div class="col-md-1">
+								<div class="col-md-1 vcenter">
 									<i class="fa fa-calendar" style="font-size:35px;"></i>
 								</div>
 								<div class="col-md-11">
