--- a/static/styles/courses/course-edit.scss
+++ b/static/styles/courses/course-edit.scss
@@ -22,6 +22,7 @@
       + .color-picker__color {
         width: 32px;
         height: 32px;
+        border-radius: 50%;
         &:after {
           content: '';
         }
@@ -31,7 +32,6 @@
     &:disabled {
       + .color-picker__color {
         opacity: 0.5;
-
         &:hover {
          cursor: not-allowed;
         }
@@ -44,7 +44,7 @@
     display: block;
     width: 32px;
     height: 32px;
-
+    border-radius: 50%;
     &:hover {
       cursor: pointer;
     }
