--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -21,9 +21,9 @@
           <h4 id="page-title" class="course-headline">{{{stripOnlyScript ../name}}}</h4>
           <i class="fa fa-cog"></i>
         </a>
-        <div class="dropdown-menu dropdown-menu-right dropdown-menu-course">
+        <div class="dropdown-menu dropdown-menu dropdown-menu-course">
           <a href="/courses/{{../_id}}/edit" class="dropdown-item btn-course-edit">
-            <i class="fa fa-edit" aria-hidden="true"></i> Kurs bearbeiten
+            <i class="fa fa-edit" aria-hidden="true"></i> Kurs bearbeiten/löschen
           </a>
           <a data-href="courses/{{../_id}}/" href="#" class="dropdown-item btn-create-invitation">
             <i class="fa fa-envelope" aria-hidden="true"></i> zum Kurs einladen
