--- a/views/teams/overview-empty.hbs
+++ b/views/teams/overview-empty.hbs
@@ -13,7 +13,7 @@
             <div class="text-wrapper mx-auto d-block">
                 <h2 class="text-center">Teams vernetzen Schule</h2>
                 <h3 class="h5 text-muted text-center">
-                    Lege ein Team an, um Material und Neuigkeiten zwischen Mitgliedern außerhalb von Kursen auszutauschen.
+                    Arbeitsgemeinschaft, Schul-Band oder Klassensprecherversammlung? Lege ein Team an, um untereinander Material und Neuigkeiten auszutauschen - innerhalb deiner Schule oder schulübergreifend.
                 </h3>
             </div>
             {{#userHasPermission "TEAM_EDIT"}}
