--- a/views/firstLogin/sections/consent_updates.hbs
+++ b/views/firstLogin/sections/consent_updates.hbs
@@ -1,4 +1,5 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page" {{/if}}>
+
   <h4>Aktualisierung deiner Einwilligungserklärung{{#ifCond @root.updatedConsents.total '>' 1}}en{{/ifCond}}</h4>
   <p style="margin-bottom: 20px;">Für ein noch besseres Lernerlebnis wird die {{@root.theme.title}} stetig
     weiterentwickelt. Im Zuge dessen hat sich
@@ -9,13 +10,13 @@
     {{/ifCond}}
     die Datenschutzerklärung
     {{/ifCond}}
-    erweitert. Nachfolgend kannst du dich über die Änderungen
-    informieren.
+    erweitert.
   </p>
+  <div id="consentUpdateFields">
+    {{#if @root.updatedConsents.haveBeenUpdated}}
 
-  {{#if @root.updatedConsents.haveBeenUpdated}}
-  <div class="consentVersions">
     {{#each @root.updatedConsents.all.data}}
+    <h5>Zusammenfassung der Änderungen</h5>
     <div class='privacyStatement card'>
       <div class="card-header">
         <h5>Änderung der {{this.visualType}} zum {{dateToPicker this.publishedAt}}</h5>
@@ -26,7 +27,8 @@
     </div>
     {{/each}}
 
-    <div id="consentUpdateFields">&nbsp;<br>
+    <div class="consentVersions">
+      <h5>Kenntnisnahme </h5>
       {{#if @root.updatedConsents.privacy.total}}
       <label>
         <input name="privacyConsentVersion" type="hidden" value="true" />
